# swift-argument-parser

./: .editorconfig  .gitignore  .license_header_template  .licenseignore  .spi.yml  .swift-format  .unacceptablelanguageignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  DOCS_README.md  MODULE.bazel  Package.swift  Package@swift-5.5.swift  Package@swift-5.6.swift  Package@swift-5.8.swift  Package@swift-5.9.swift  README.md  build_output.txt  commandsandsubcommands.html  customizingcompletions.html  customizinghelp.html  declaringarguments.html  gettingstarted.html  index.html  installingcompletionscripts.html  manualparsing.html  metadata.json  validation.html
Examples/: BUILD.bazel  CMakeLists.txt
Examples/color/: Color.swift
Examples/count-lines/: CountLines.swift
Examples/default-as-flag/: DefaultAsFlag.swift
Examples/errors/: main.swift
Examples/extendable/: Extendable.swift
Examples/math/: CMakeLists.txt  Extra.swift  Math.swift  main.swift
Examples/repeat/: CMakeLists.txt  Repeat.swift  main.swift
Examples/roll/: CMakeLists.txt  SplitMix64.swift  main.swift
Sources/: CMakeLists.txt  CTools.h  module.modulemap
Sources/ArgumentParser/: CMakeLists.txt
Sources/ArgumentParserGenerators/: GenerateCommand.swift  Subprocess.swift  main.swift
Sources/ArgumentParserOpenCLI/: CMakeLists.txt  OpenCLI.swift  OpenCLIv0_1.swift
Sources/ArgumentParserTestHelpers/: CMakeLists.txt  ShellCompletionTestHelpers.swift  StringHelpers.swift  TemporaryFileFixture.swift  TestHelpers+SwiftTesting.swift  TestHelpers.swift
Sources/ArgumentParserToolInfo/: CMakeLists.txt  ToolInfo.swift  ToolInfoV0.swift  ToolInfoV1.swift
Sources/CTools/: shell.c
Sources/HelpBuilder/: HelpBuilder.swift  main.swift
Sources/MDoc/: MDocMacro.swift  MDocSerializationContext.swift  String+Escaping.swift
Sources/SAPTestHelpers/: CMakeLists.txt
Sources/TestHelpers/: CMakeLists.txt  TestHelpers.swift
Sources/_CRuntime/: ImageInspection.c  MetadataViews.c  Ptrauth.c  PtrauthStrip.c
Tests/: BUILD.bazel  CMakeLists.txt  LinuxMain.swift
Tests/ArgumentParserEndToEndTests/: AsyncCommandEndToEndTests.swift  CMakeLists.txt  CustomParsingEndToEndTests.swift  DefaultAsFlagEndToEndTests.swift  DefaultSubcommandEndToEndTests.swift  DefaultsEndToEndTests.swift  EnumEndToEndTests.swift  EqualsEndToEndTests.swift  FlagsEndToEndTests.swift  JoinedEndToEndTests.swift  LongNameWithShortDashEndToEndTests.swift  NegativeNumbersEndToEndTests.swift  NestedCommandEndToEndTests.swift  OpenCLIDumpHelpGenerationTests.swift  OpenCLIEndToEndTests.swift  OptionGroupEndToEndTests.swift  OptionalEndToEndTests.swift  OrderedOptionsEndToEndTests.swift  ParsingConventionEndToEndTests.swift  PositionalEndToEndTests.swift  RawRepresentableEndToEndTests.swift  RepeatingEndToEndTests+ParsingStrategy.swift  RepeatingEndToEndTests.swift  ResponseFileEndToEndTests.swift  ShortNameEndToEndTests.swift  SimpleEndToEndTests.swift  SingleValueParsingStrategyTests.swift  SourceCompatEndToEndTests.swift  SourceLocationDumpEndToEndTests.swift  SourceLocationEndToEndTestSupport.swift  SourceLocationErrorEndToEndTests.swift  SubcommandEndToEndTests.swift  TransformEndToEndTests.swift  UnparsedValuesEndToEndTest.swift  ValidationEndToEndTests.swift
Tests/ArgumentParserExampleTests/: CountLinesExampleTests.swift  CountLinesTest.txt  MathExampleTests.swift  RepeatExampleTests.swift  RollDiceExampleTests.swift  ShellCompletionIntegrationTests.swift
Tests/ArgumentParserGenerateDoccReferenceTests/: ColorGenerateDoccReferenceTests.swift  CountLinesGenerateDoccReferenceTests.swift  GenerateDoccReferenceTests.swift  MathGenerateDoccReferenceTests.swift  RepeatGenerateDoccReferenceTests.swift  RollDiceGenerateDoccReferenceTests.swift
Tests/ArgumentParserGenerateManualTests/: ColorGenerateManualTests.swift  CountLinesGenerateManualTests.swift  GenerateManualTests.swift  MathGenerateManualTests.swift  RepeatGenerateManualTests.swift  RollDiceGenerateManualTests.swift
Tests/ArgumentParserInteractiveTests/: ArgumentInteractiveTests.swift  FlagInteractiveTests.swift  InteractiveExampleTests.swift  InteractiveTests.swift  InvalidValueInteractiveTests.swift  InvalidValuesInteractiveTest.swift  OptionInteractiveTests.swift
Tests/ArgumentParserPackageManagerTests/: HelpTests.swift  Tests.swift
Tests/ArgumentParserToolInfoTests/: ArgumentParserToolInfoTests.swift
Tests/ArgumentParserUnitTests/: CMakeLists.txt  CodingKeyValidationTests.swift  CommandSearcherTests.swift  CompletionScriptTests.swift  DefaultAsFlagCompletionTests.swift  DefaultAsFlagDumpHelpTests.swift  DumpHelpGenerationTests.swift  ErrorMessageTests.swift  ExitCodeTests.swift  HelpGenerationTests+AtArgument.swift  HelpGenerationTests+AtOption.swift  HelpGenerationTests+AtOptionDefaultAsFlag.swift  HelpGenerationTests+ExpandedSynopses.swift  HelpGenerationTests+GroupName.swift  HelpGenerationTests.swift  InputOriginTests.swift  LocalizationTests.swift  MirrorTests.swift  NameSpecificationTests.swift  NegativeNumberArgumentTests.swift  OpenCLITests.swift  ParsableArgumentsValidationTests.swift  RequestingCompletionScriptTests.swift  ResponseFileExpanderTests.swift  SearchEngineTests.swift  SendableTests.swift  SequenceExtensionTests.swift  SplitArgumentTests.swift  StringEditDistanceTests.swift  StringQuoteTests.swift  StringSnakeCaseTests.swift  StringTokenizedTests.swift  StringWrappingTests.swift  TreeTests.swift  URLArgumentTests.swift  UsageGenerationTests.swift
Tests/EndToEndTests/: CMakeLists.txt  CustomParsingEndToEndTests.swift  DefaultsEndToEndTests.swift  EnumEndToEndTests.swift  FlagsEndToEndTests.swift  LongNameWithShortDashEndToEndTests.swift  NestedCommandEndToEndTests.swift  OptionGroupEndToEndTests.swift  OptionalEndToEndTests.swift  PositionalEndToEndTests.swift  RawRepresentableEndToEndTests.swift  RepeatingEndToEndTests.swift  ShortNameEndToEndTests.swift  SimpleEndToEndTests.swift  SingleValueParsingStrategyTests.swift  SubcommandEndToEndTests.swift  ValidationEndToEndTests.swift
Tools/: BUILD.bazel
(+1048 files in other folders)
