module(
    name = "swift_argument_parser",
    version = "0",
    compatibility_level = 1,
)

bazel_dep(name = "apple_support", version = "2.5.4")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_swift", version = "3.6.1", max_compatibility_level = 3)
