load("@rules_swift//swift:swift.bzl", "swift_binary")

package(default_visibility = ["//:__subpackages__"])

swift_binary(
    name = "count-lines",
    srcs = glob(["count-lines/**/*.swift"]),
    target_compatible_with = ["@platforms//os:macos"],
    deps = ["//:ArgumentParser"],
)

[
    swift_binary(
        name = tool,
        srcs = glob(["{}/**/*.swift".format(tool)]),
        deps = ["//:ArgumentParser"],
    )
    for tool in [
        "color",
        "default-as-flag",
        "math",
        "repeat",
        "roll",
    ]
]
